Release 1.1.1: unify commands and clean sources